# featherlight.io

./: README.md  setup.cfg  start_dev.bat
notification_form/: __init__.py  api.py  auth.py  blog.py  schema.sql
notification_form/templates/: base.html
notification_form/templates/auth/: login.html  register.html
notification_form/templates/blog/: create.html  index.html  modal_js.html  modal_py.html  update.html
tests/: conftest.py  test_auth.py  test_blog.py  test_db.py  test_factory.py
