[metadata]
name = notification_form
version = 0.0.1
url = https://brainasium.app/code-challenge
license = BSD-3-Clause
maintainer = Connor Elliott
maintainer_email = connorelliott89@gmail.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.md
long_description_content_type = text/md

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    requests
    pandas

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr
